# sql-guardrail

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  POLICY.md
examples/: backend_integration.py  policy.yml
src/sqlguard/: __init__.py  cli.py  result.py
src/sqlguard/config/: schema.py
src/sqlguard/core/: idents.py  parser.py  preflight.py  scope.py
src/sqlguard/core/rules/: allowlist.py  function_allow.py  limits.py  predicates.py  readonly.py
src/sqlguard/server/: __init__.py  __main__.py  app.py  models.py
tests/: conftest.py  test_corpus.py  test_security.py
tests/benign/: cte_aggregation.sql  except_simple.sql  fetch_first_rows_only.sql  group_by.sql  having_legit.sql  intersect_simple.sql  join_with_tenant.sql  simple_select.sql  union_simple.sql  window_function.sql
tests/malicious/: _manifest.json  alter_system.sql  always_true.sql  call_procedure.sql  coalesce_null_tenants.sql  copy_from_program.sql  create_policy_disable_rls.sql  create_rule_rewrite_select.sql  cross_join_cartesian.sql  data_modifying_cte.sql  denied_column.sql  dml_insert_deny_column.sql  do_block.sql  explain_analyze.sql  for_update.sql  having_max_denied_column.sql  having_password_exfil.sql  limit_all_bypass.sql  listen_notify.sql  missing_tenant.sql  multi_statement.sql  natural_join.sql  offset_dos.sql  offset_setop_bypass.sql  pg_hba_file_rules.sql  pg_sleep_blind.sql  qualified_wildcard_to_jsonb.sql  quoted_different_table.sql  recursive_cte_dos.sql  select_into.sql  select_star.sql  self_join_bypass.sql  set_search_path.sql  sibling_subquery_limit_bypass.sql  table_shorthand_pg_shadow.sql  tautology_arithmetic.sql  tautology_between.sql  tautology_case.sql  tautology_cast_bool.sql  tautology_column_self_eq.sql  (+5 more)
tests/server/: conftest.py  test_app.py  test_health.py  test_lifespan.py
tests/unit/: test_allowlist.py  test_cast_tolerance.py  test_cli.py  test_config.py  test_limits.py  test_locks.py  test_predicate_advanced.py  test_predicates.py  test_preflight.py  test_readonly.py  test_result.py  test_statement_kinds.py
