[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-guardrail"
version = "0.5.1"
description = "SQL safety validator for LLM-generated queries"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "nickusevich" }]
keywords = [
    "sql",
    "validator",
    "guardrail",
    "llm",
    "security",
    "sqlglot",
    "text-to-sql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # sqlglot has had breaking AST changes across majors. Pin tightly to
    # the major we've actually tested against (30.x).
    "sqlglot>=30.0,<31.0",
    # Pydantic has had breaking changes across majors too. Pin to v2.x —
    # upgrading to a future v3 should be a deliberate decision after testing.
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
# Opt-in HTTP server dependencies. Install with `uv add "sql-guardrail[server]"`
# (or `pip install "sql-guardrail[server]"`). Kept out of core so library
# users don't pull a web framework they don't need.
server = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    # Git hook runner — see .pre-commit-config.yaml. Runs the same ruff/mypy
    # CI uses, shifted to commit/push time; CI also runs `pre-commit run`.
    "pre-commit>=4.0",
    # httpx is FastAPI's TestClient dependency. Pulled into [dev] so server
    # tests run without [server] also being installed.
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/nickusevich/sql-guardrail"
Repository = "https://github.com/nickusevich/sql-guardrail"
Issues = "https://github.com/nickusevich/sql-guardrail/issues"
Changelog = "https://github.com/nickusevich/sql-guardrail/blob/main/CHANGELOG.md"

[project.scripts]
sqlguard = "sqlguard.cli:main"
sqlguard-server = "sqlguard.server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlguard"]

# Keep the sdist focused on source + docs + tests. Excludes local
# agent configs, Docker scaffolding, and CI internals that don't
# belong in a PyPI tarball.
[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".gitignore",
    ".dockerignore",
    "Dockerfile",
    "docker-compose.yml",
    # Lock file is for contributor dev-env reproducibility only —
    # downstream library consumers resolve against `dependencies`,
    # not against our pinned lock. Excluding shrinks the sdist by ~188 KB.
    "uv.lock",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

# Test files frequently contain long SQL strings inside parametrize lists.
# Splitting them hurts readability without buying anything.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

# Third-party libs without published stubs. sqlglot exposes Expression
# trees whose .args dicts return `Any`; suppressing missing imports here
# is the standard workaround.
[[tool.mypy.overrides]]
module = ["yaml", "sqlglot", "sqlglot.*"]
ignore_missing_imports = true

# fastapi/uvicorn are optional ([server] extra). Skip strict checks if not installed
# so `mypy --strict src/` on a core-only checkout doesn't fail.
[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
